RESOLVED FIXED200136
WebKit/UIProcess/ios/WKContentViewInteraction.mm: error: implementing deprecated method contextMenuInteractionWillPresent
https://bugs.webkit.org/show_bug.cgi?id=200136
Summary WebKit/UIProcess/ios/WKContentViewInteraction.mm: error: implementing depreca...
Dean Jackson
Reported 2019-07-25 13:32:33 PDT
WebKit/UIProcess/ios/WKContentViewInteraction.mm: error: implementing deprecated method contextMenuInteractionWillPresent
Attachments
Patch (2.45 KB, patch)
2019-07-25 13:34 PDT, Dean Jackson
wenson_hsieh: review+
Dean Jackson
Comment 1 2019-07-25 13:33:07 PDT
Dean Jackson
Comment 2 2019-07-25 13:34:58 PDT
Dean Jackson
Comment 3 2019-07-25 13:37:51 PDT
Dean Jackson
Comment 4 2019-07-25 13:56:31 PDT
Note You need to log in before you can comment on or make changes to this bug.