Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm
@@ -8118,7 +8118,9 @@ static RetainPtr<UITargetedPreview> createFallbackTargetedPreview(UIView *rootVi
     return [self _createTargetedPreviewIfPossible];
 }
 
+ALLOW_DEPRECATED_IMPLEMENTATIONS_BEGIN
 - (void)contextMenuInteractionWillPresent:(UIContextMenuInteraction *)interaction
+ALLOW_DEPRECATED_IMPLEMENTATIONS_END
 {
     if (!_webView)
         return;
@@ -8139,7 +8141,9 @@ static RetainPtr<UITargetedPreview> createFallbackTargetedPreview(UIView *rootVi
     return std::exchange(_contextMenuInteractionTargetedPreview, nil).autorelease();
 }
 
+ALLOW_DEPRECATED_IMPLEMENTATIONS_BEGIN
 - (void)contextMenuInteraction:(UIContextMenuInteraction *)interaction willCommitWithAnimator:(id<UIContextMenuInteractionCommitAnimating>)animator
+ALLOW_DEPRECATED_IMPLEMENTATIONS_END
 {
     if (!_webView)
         return;
@@ -8192,7 +8196,9 @@ static RetainPtr<UITargetedPreview> createFallbackTargetedPreview(UIView *rootVi
     }
 }
 
+ALLOW_DEPRECATED_IMPLEMENTATIONS_BEGIN
 - (void)contextMenuInteractionDidEnd:(UIContextMenuInteraction *)interaction
+ALLOW_DEPRECATED_IMPLEMENTATIONS_END
 {
     if (!_webView)
         return;
